--- a/src/components/Calculator/styles.scss
+++ b/src/components/Calculator/styles.scss
@@ -1,9 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800&display=swap');
 
+
+.calculator_container {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
 .calculator {
     font-family: 'Orbitron', sans-serif;
     width: 420px;
-    margin: 4rem auto;
     border: 8px solid black;
     box-sizing: border-box;
 
@@ -17,6 +26,8 @@
         padding-bottom: 1rem;
         padding-top: 3px;
         flex-direction: column;
+        height: 4rem;
+        justify-content: center;
 
         .calc {
             color: #EFA500;
